--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Amazon Clone - Your one-stop shop for everything." />
+    <meta name="description" content="NexaCart - Your one-stop shop for everything." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <title>Amazon Clone - Shop Online</title>
+    <title>NexaCart - Shop Online</title>
+    <link rel="icon" type="image/svg+xml" href="/nexacart-logo.svg" />
   </head>
   <body>
     <div id="root"></div>
